--- a/package.json
+++ b/package.json
@@ -1,40 +1,71 @@
 {
-  "name": "portfolio-website",
-  "version": "1.0.0",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "description": "portfolio-website",
-  "author": "chimingyip",
-  "keywords": [
-    "gatsby"
-  ],
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "gatsby": "^4.8.0",
-    "gatsby-plugin-google-analytics": "^4.8.0",
-    "gatsby-plugin-image": "^2.8.1",
-    "gatsby-plugin-manifest": "^4.8.1",
-    "gatsby-plugin-react-helmet": "^5.8.0",
-    "gatsby-plugin-sass": "^5.8.0",
-    "gatsby-plugin-sharp": "^4.8.1",
-    "gatsby-plugin-sitemap": "^5.8.0",
-    "gatsby-source-filesystem": "^4.8.1",
-    "gatsby-transformer-sharp": "^4.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "bootstrap": "^5.1.3",
+    "gatsby": "^4.9.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
+    "nanoid": "^3.3.1",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
+    "react-dom": "^17.0.2",
+    "react-github-btn": "^1.2.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.49.9"
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.6",
+    "react-tilt": "^0.1.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.5"
+    "babel-eslint": "^10.1.0",
+    "eslint": "8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.3.5",
+    "prettier": "^2.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "lint-staged": {
+    "*.+(js|jsx)": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.+(json|css|md)": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
