--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-manifest": "^4.9.0",
     "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-source-filesystem": "^4.9.0",
@@ -49,7 +50,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "svg-react-loader": "^0.4.6"
   },
   "repository": {
     "type": "git",
