--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "gatsby": "^4.9.2",
+    "gatsby": "^4.9.3",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-manifest": "^4.9.0",
-    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-manifest": "^4.9.1",
+    "gatsby-plugin-offline": "^5.9.1",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sass": "^5.9.0",
-    "gatsby-plugin-sharp": "^4.9.0",
-    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-plugin-sharp": "^4.9.1",
+    "gatsby-source-filesystem": "^4.9.1",
     "gatsby-transformer-sharp": "^4.9.0",
     "nanoid": "^3.3.1",
-    "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
@@ -36,7 +35,8 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.6",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -48,7 +48,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
     "svg-react-loader": "^0.4.6"
